create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  namespace: omar
  labels:
    app: posts
spec:
  containers:
    - name: posts-container
      image: second-image:03
      command: ["node", "index.js"]
      ports:
      - containerPort: 3000
        protocol: TCP  
---
apiVersion: v1
kind: Pod
metadata:
  name: second-pod
  namespace: omar
  labels: 
    app: votes
spec:
  containers:
    - name: votes-container
      image: second-image:03
      command: ["node","index.js"]
      ports:
      - containerPort: 3000
        protocol: TCP
