votes-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votes-deployment
  namespace: omar
  labels:
    app: votes 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: votes
  template:
    metadata:
      labels:
        app: votes
    spec:
      containers:
      - name: votes
        image: second-image:03
        ports:
        - containerPort: 3001
