post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: omar
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3000
