votes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: votes-service
  namespace: omar
spec:
  selector:
    app: votes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
